--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,47 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            name = "forge"
+            url = "http://files.minecraftforge.net/maven"
+        }
+        maven {
+            name = "Sonatype Snapshots"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
+        maven {
+            name = "Sonatype Releases"
+            url = "https://oss.sonatype.org/content/repositories/releases/"
+        }
+    }
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.1-SNAPSHOT'
+        classpath 'net.saliman:gradle-cobertura-plugin:2.2.2'
+    }
+}
+
 apply plugin: 'scala'
+apply plugin: 'forge'
+apply plugin: 'cobertura'
 apply from: 'gradle/play.gradle'
+
+group = 'k2b6s9j'
+archivesBaseName = 'ForgeDash'
+version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+}
+
+cobertura {
+    coverageFormats = ['html', 'xml']
+    coverageIgnoreTrivial = true;
+}
+
+minecraft {
+    version = '1.7.2-10.12.0.1024'
+    mcpVersion = '9.03'
 }
